<resources>
    <string name="app_name">Kalat</string>
    <string name="author_Title">Developer</string>
    <string name="app_version">2.0</string>
    <string name="summary_about"> MyAmharicPal is a free Amharic language learning android application
    for designed for English speakers.\n \nAmharic,the official working language of Ethiopia along
        with English, is spoken by around 26 million people.
</string>
    <string name="storage_title">Storage</string>
    <string name="scope_title">Scope</string>
    <!--<string name="Main_title">Categories</string>-->
    <string name="author_name">Bisrat Belayneh\nbelayb@uw.edu</string>
    <string name="scope_summary">
    \nThis version provides translations for 668 phrases and words
    in 15 categories with clickable audio. Quizzes for each category is also provided.
        \n\n Variations in gender and
    singular vs plural addressing is indicated next to each English word.
    \n\nCategory search is supported.\n\nThis version supports Android phones only.
    </string>
    <string name="title_version">Version</string>
    <string name="pref_header_about">About</string>
    <string name="storage_space">42MB</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">I would love to hear your feedback!</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>

    <string name="title_send_feedback">Send Feedback</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>

    <string name="title_activity_settings">Settings</string>
    <string name="button_menu_show_all">Show All</string>
    <string name="button_menu_quiz">Take Quiz</string>
    <string name="menu_title">Choose Action</string>


</resources>
