<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory


        android:summary="info"
        android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />


        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />
        <Preference
            android:summary="@string/author_name"
            android:title="@string/author_Title" />

        <Preference
            android:summary="@string/storage_space"
            android:title="@string/storage_title" />
        <Preference
            android:summary="@string/scope_summary"
            android:title="@string/scope_title" />
        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />




    </PreferenceCategory>
</PreferenceScreen>
